--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <div class="container my-5">
         <div class="text-center mb-4">
             <h1 class="display-6">ChatSkD (Chatbot for Skeletal Dysplasia)</h1>
-            <h1 class="display-6">AI Chatbot for Differential Diagnosis in Skeletal Dysplasi</h1>
+            <h1 class="display-6">AI Chatbot for Differential Diagnosis in Skeletal Dysplasia</h1>
             <p class="text-danger lead">
                 Notice: This chatbot is for experimental purposes only and not for medical use. Data gets sent to OpenAI!
             </p>
